# localGMP

./: .gitignore  CMakeLists.txt  README.md
gmp/src/gmp-stamp/: download-gmp.cmake  extract-gmp.cmake  gmp-urlinfo.txt
gmp/tmp/: gmp-cfgcmd.txt
src/: CMakeLists.txt  main.cpp
src/UI/: CMakeLists.txt
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt
